Add a couple of functions to app.js and a couple of buttons to the html file.

--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 
 .square {
 	display: inline-block;
+	float: left;
 }
 
 #container {
 	width: 640px;
-	width: 640px;
+	height: 640px;
 	border: 1px solid;
 	margin: 125px auto;
 }
